--- a/kya.html
+++ b/kya.html
@@ -6,39 +6,68 @@
 
 <script>
 var w = window.innerWidth;
+
 var h = window.innerHeight;
+
+var barri = new barri();
+
 
 
 function setup() {
+
   createCanvas(w,h);
+
 }
+
+
 
 function draw() {
+
   background("black");
-  barrier.show();
-  barrier.update();
+
+  barri.show();
+
+  barri.update();
+
 }
 
-function barrier() {
+
+
+function barri() {
+
   this.leftPull = 1;
+
   this.velocity = 5;
-  this.height = 100;
-  this.width = 100;
-  this.x = w + this.width;
-  this.y = math.floor((Math.random() * h)/* + 10*/);
+
+  this.he = 100;
+
+  this.wi = 100;
+
+  this.x = w + this.wi;
+
+  this.y = Math.floor((Math.random() * h) + 10);
+
   this.show = function() {
+
     this.x;
+
     this.y;
+
     fill(color("white"));
-    rect(this.x,this.y,this.width,this.height);
+
+    rect(this.x,this.y,this.wi,this.he);
+
   }
+
   this.update = function() {
+
     this.velocity += this.leftPull;
+
     this.x -= this.velocity;
-  }
+
   }
 
-
+  }
 </script>
 </body>
 </html>
