--- a/ko.html
+++ b/ko.html
@@ -1,37 +1,38 @@
 <html>
 <head>
-<script src="p5/p5.mi.js"></script>
-<script src="ka.js"></script>
-<script src="kya.js"></script>
-<script src="p5.collide2d.min.js"></script>
+<script src="p5.mi.js"></script>
+
 </head>
 <body>
 
 <script>
+var w = window.innerWidth;
+var h = window.innerHeight;
+//var jumper = new jumper();
+//var barri = new barri();
+
 function setup() {
   createCanvas(w,h);
 }
 
 function draw() {
-  background("0");
-  jumper.show();
+  background("black");
+  /*jumper.show();
   jumper.update();
-  barrier.show();
-  barrier.update();
-  hit = colliedeRectCircle(
-  barrier.x,
-  barrier.y,
-  barrier.width,
-  barrier.height,
+  barri.show();
+  barri.update();
+  hit = collideRectCircle(
+  barri.x,
+  barri.y,
+  barri.wi,
+  barri.he,
   jumper.x,
   jumper.y,
-  25);
+  100);
   if (hit === true) {
     noloop();
-  }
+  }*/
 }
-
-
 </script>
 </body>
 </html>
