--- a/go.html
+++ b/go.html
@@ -150,9 +150,8 @@ function ad() {
 }
 function suta() {
   this.act = function() {
-    if (millis() < (0500)) {
-  
-  window.alert("welcome");
+    if (millis() < (0750)) {
+  window.alert("welcome WEL-COME to 'name' (っ^o^)っ Use mouse to dodge evil quadrilaterals and see how long you can last  (press space to restart btw... or the reload button I guess...)");
     }
    }
 }
